# authentication_server_rocket

./: .env  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose-mongo.yml  docker-compose.yml
mongoDb/: Dockerfile  setup.sh
src/: main.rs
src/config/: crypto.rs
src/controller/: mod.rs  user_controller.rs
src/handlers/: error.rs
src/models/: user.rs
src/services/: user_service.rs
src/utils/: mod.rs  mongo_util.rs
