[package]
name = "authentication_server_rocket"
version = "0.1.0"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets", "tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13"
serde_json = "1.0.64"
dotenv = "0.15.0"
log = "0.4"
validator = "0.10"
validator_derive = "0.10"
jsonwebtoken = "7.1"
rust-argon2 = "0.8"
chrono = { version = "0.4.19", features = ["serde"] }
eyre = "0.4"
color-eyre = "0.3"
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = "0.1.2"
tracing-subscriber = "0.2"
futures = { version = "0.3", features = ["compat"] }
blake3 = "1.0.0"

[dependencies.mongodb]
version = "1.2.2"
default-features = false
features = ["async-std-runtime"]